deployment/examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: stage-palazzi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: image-registry.openshift-image-registry.svc:5000/stage-clemente/keycloak:v1
          ports:
            - containerPort: 8080
          command: ["/opt/keycloak/bin/kc.sh"]
          args: ["start-dev"]
          volumeMounts:
            - name: keycloak-storage
              mountPath: /opt/keycloak/data
      volumes:
          - name: keycloak-storage
            persistentVolumeClaim:
              claimName: pvc-ebs-esistente
